feat(package): Blindly upgrade our dependencies for the new year and support node@10.
BREAKING CHANGE: Really, this is more about dropping support for node@8, but AWS is disallowing creation of node@8 lambdas today anyways, per https://docs.aws.amazon.com/lambda/latest/dg/runtime-support-policy.html.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ notifications:
 dist: xenial
 jdk:
   - oraclejdk11
+before_install:
+  - nvm install 10
 install: ./gradlew assemble
 after_install:
   - npm install -g npm
