--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "mocha": "^7.0.0",
     "semantic-release": "^15.14.0",
     "serverless": "^1.60.5",
-    "serverless-api-compression": "1.0.1",
+    "serverless-api-compression": "^1.0.1",
     "serverless-apigw-binary": "^0.4.4",
     "serverless-apigwy-binary": "^1.0.0",
-    "serverless-domain-manager": "3.3.0",
-    "serverless-offline": "5.12.1",
-    "serverless-plugin-tracing": "2.0.0"
+    "serverless-domain-manager": "^3.3.0",
+    "serverless-offline": "^5.12.1",
+    "serverless-plugin-tracing": "^2.0.0"
   },
   "engines": {
     "node": ">=8"
