fix: Deploy our `serverless-domain-manager` uses the `*.randytarampi.ca` certificate in all environments.
Because I don't want to talk with AWS about why it can't provision me a valid certificate against `*.dev.randytarampi.ca` right now.

--- a/config/env.yml
+++ b/config/env.yml
@@ -1,8 +1,8 @@
 deploy: &deployConfig
   baseDomainName: ${self:provider.stage}.randytarampi.ca
   domainName: ${self:service}.${self:provider.baseDomainName}
-  acmArn: arn:aws:acm:us-east-1:471964952458:certificate/c04b19ec-28f9-4bb9-9e88-a143b4355cb1
-  acmName: "*.${self:provider.stage}.randytarampi.ca"
+  acmArn: arn:aws:acm:us-east-1:471964952458:certificate/b363d5a1-7db1-4504-94a1-1dbe9273ae62
+  acmName: "*.randytarampi.ca"
   alarmTopic: arn:aws:sns:us-east-1:471964952458:CloudWatchNotifications
 
   environment: &deployEnvironment
